@@ -22,7 +22,8 @@
   * Distinguish between missing files and read errors in HTTP server.
     (Dave Borowitz)
 
-  * Initial work on a fastimport parser. (Jelmer Vernooij)
+  * Initial work on support for fastimport using python-fastimport.
+    (Jelmer Vernooij)
 
   * New dulwich.pack.MemoryPackIndex class. (Jelmer Vernooij)
 
